--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "alextanhongpin <alextan220990@gmail.com>",
   "license": "ISC",
-  "repository": "git://github.com/alextanhongpin/test.git"
+  "repository": "git://github.com/alextanhongpin/test.git",
+  "engine": {
+    "node": "14.8.0"
+  }
 }
